--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,50 +1,52 @@
 @if (isLoading()) {
-<div class="thread-loading">
-  <mat-spinner diameter="32"></mat-spinner>
-  <p class="loading-text">Loading thread...</p>
-</div>
+  <div class="thread-loading">
+    <mat-spinner diameter="32"></mat-spinner>
+    <p class="loading-text">Loading thread...</p>
+  </div>
 } @else {
-<!-- Display parent events in thread (if any) -->
-@if (parentEvents().length > 0) {
-<div class="parent-events">
-  <h3>Thread Context</h3>
-  @for (parentEvent of parentEvents(); track parentEvent.id) {
-  <div class="parent-event">
-    <app-event [event]="parentEvent" appearance="plain"></app-event>
-  </div>
+  <!-- Display parent events in thread (if any) -->
+  @if (parentEvents().length > 0) {
+    <div class="parent-events">
+      <h3>Thread Context</h3>
+      @for (parentEvent of parentEvents(); track parentEvent.id) {
+        <div class="parent-event">
+          <app-event [event]="parentEvent" appearance="plain"></app-event>
+        </div>
+      }
+      <div class="thread-indicator">
+        <hr />
+        <span>Reply below</span>
+        <hr />
+      </div>
+    </div>
   }
-  <div class="thread-indicator">
-    <hr />
-    <span>Reply below</span>
-    <hr />
+
+  <!-- Main event -->
+  <app-event [event]="event()" appearance="plain"></app-event>
+
+  <div class="reactions">
+    @for (reaction of reactions(); track reaction.emoji) {
+      <div class="reaction">
+        <span class="emoji">{{ reaction.emoji }}</span>
+        <span class="count">{{ reaction.count }}</span>
+      </div>
+    }
   </div>
-</div>
-}
 
-<!-- Main event -->
-<app-event [event]="event()" appearance="plain"></app-event>
+  @if (error()) {
+    <div class="warn">
+      {{ error() }}
+    </div>
+  }
 
-<div class="reactions">
-  @for (reaction of reactions(); track reaction.emoji) {
-  <div class="reaction">
-    <span class="emoji">{{ reaction.emoji }}</span>
-    <span class="count">{{ reaction.count }}</span>
+  <div class="replies-section">
+    @for (threadedEvent of threadedReplies(); track threadedEvent.event.id) {
+      <ng-container
+        [ngTemplateOutlet]="replyTemplate"
+        [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"
+      ></ng-container>
+    }
   </div>
-  }
-</div>
-
-@if (error()) {
-<div class="warn">
-  {{ error() }}
-</div>
-}
-
-<div class="replies-section">
-  @for (threadedEvent of threadedReplies(); track threadedEvent.event.id) {
-  <ng-container [ngTemplateOutlet]="replyTemplate"
-    [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"></ng-container>
-  }
-</div>
 }
 
 <ng-template #replyTemplate let-threadedEvent="threadedEvent">
@@ -52,17 +54,26 @@
     <app-event [event]="threadedEvent.event"></app-event>
 
     @for (childReply of threadedEvent.replies; track childReply.event.id) {
-    <ng-container [ngTemplateOutlet]="replyTemplate"
-      [ngTemplateOutletContext]="{ threadedEvent: childReply }"></ng-container>
+      <ng-container
+        [ngTemplateOutlet]="replyTemplate"
+        [ngTemplateOutletContext]="{ threadedEvent: childReply }"
+      ></ng-container>
     }
 
     @if (threadedEvent.hasMoreReplies && threadedEvent.deepestReplyId) {
-    <div class="view-more-replies" [style.margin-left.px]="(threadedEvent.level + 1) * 24">
-      <button mat-stroked-button class="view-more-button" (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)">
-        <mat-icon>expand_more</mat-icon>
-        View more replies
-      </button>
-    </div>
+      <div
+        class="view-more-replies"
+        [style.margin-left.px]="(threadedEvent.level + 1) * 24"
+      >
+        <button
+          mat-stroked-button
+          class="view-more-button"
+          (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)"
+        >
+          <mat-icon>expand_more</mat-icon>
+          View more replies
+        </button>
+      </div>
     }
   </div>
 </ng-template>
