--- a/src/app/pages/profile/profile-connections/profile-connections.component.html
+++ b/src/app/pages/profile/profile-connections/profile-connections.component.html
@@ -1,5 +1,5 @@
 <div class="connections-container">
-  @for (item of profileState.followingList(); track item) {
+  @for (item of profileState.followingList(); track $index) {
     {{ item }} <br />
   }
 
