--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -78,12 +78,15 @@
         </mat-menu>
       }
       <button
-        mat-icon-button
-        [ngClass]="{ active: !!likeReaction() }"
+        mat-button
+        [ngClass]="{ active: !!likeReaction(), 'only-icon': !likes().length }"
         [disabled]="isLoadingReactions()"
         (click)="toggleLike()"
       >
         <mat-icon>favorite</mat-icon>
+        @if (likes().length > 0) {
+          {{ (likes() || []).length }}
+        }
       </button>
 
       <button mat-icon-button class="note-footer-right">
