fix: cache repost fetching and switch it on back
Also added loader to Like button

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -45,17 +45,20 @@
       @if (app.enabledFeature('beta')) {
         <button
           mat-button
-          [ngClass]="{ active: !!repostByCurrentAccount() }"
+          [ngClass]="{
+            active: !!repostByCurrentAccount(),
+            'only-icon': !reposts().length && !isLoadingReposts(),
+          }"
           [matMenuTriggerFor]="menu"
           [disabled]="isLoadingReposts()"
         >
+          <mat-icon>repeat</mat-icon>
           @if (isLoadingReposts()) {
-            <mat-spinner diameter="16"></mat-spinner>
+            <mat-spinner diameter="18"></mat-spinner>
           } @else {
-            <ng-container>
-              <mat-icon>repeat</mat-icon>
+            @if (reposts().length > 0) {
               {{ reposts().length }}
-            </ng-container>
+            }
           }
         </button>
 
@@ -79,13 +82,20 @@
       }
       <button
         mat-button
-        [ngClass]="{ active: !!likeReaction(), 'only-icon': !likes().length }"
+        [ngClass]="{
+          active: !!likeReaction(),
+          'only-icon': !likes().length && !isLoadingReactions(),
+        }"
         [disabled]="isLoadingReactions()"
         (click)="toggleLike()"
       >
         <mat-icon>favorite</mat-icon>
-        @if (likes().length > 0) {
-          {{ (likes() || []).length }}
+        @if (isLoadingReactions()) {
+          <mat-spinner diameter="18"></mat-spinner>
+        } @else {
+          @if (likes().length > 0) {
+            {{ (likes() || []).length }}
+          }
         }
       </button>
 
