fix: Update host width to 100% for consistent layout behavior

--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: block;
-  width: auto; // Changed from 100% to auto to allow fixed widths of parents
+  width: 100%;
 }
 
 .user-profile {
