--- a/src/app/components/content/note-content/note-content.component.html
+++ b/src/app/components/content/note-content/note-content.component.html
@@ -1,6 +1,6 @@
 @for (token of contentTokens(); track token.id) {
   @if (token.type === 'text') {
-    <span>{{ token.content }} </span>
+    <span>{{ token.content }}</span>
   } @else if (token.type === 'linebreak') {
     <br />
   } @else if (token.type === 'emoji') {
@@ -52,8 +52,8 @@
     token.type === 'nostr-mention' &&
     (token.nostrData?.type === 'npub' || token.nostrData?.type === 'nprofile')
   ) {
-    <a class="nostr-mention" (click)="onNostrMentionClick(token)"
-      >&#64;{{ token.nostrData?.displayName }}</a
+    <a class="nostr-mention" (click)="onNostrMentionClick(token)">
+      &#64;{{ token.nostrData?.displayName }}</a
     >
   }
 }
