chore: make openEvent ensure nevent is used
changed openEvent to accept both neventId and hex. If hex is passed
convert it to nevent

--- a/src/app/components/event/header/header.component.html
+++ b/src/app/components/event/header/header.component.html
@@ -6,9 +6,9 @@
       matTooltipPosition="below"
       tabindex="0"
       role="button"
-      (click)="openEventWithNevent()"
-      (keyup.enter)="openEventWithNevent()"
-      (keyup.space)="openEventWithNevent()"
+      (click)="layout.openEvent(event().id, event())"
+      (keyup.enter)="layout.openEvent(event().id, event())"
+      (keyup.space)="layout.openEvent(event().id, event())"
     >
       {{ event().created_at | ago }}
     </a>
